Fix spacing

--- a/packages/launchpad/src/checklist-item/style.scss
+++ b/packages/launchpad/src/checklist-item/style.scss
@@ -174,7 +174,7 @@
 }
 
 .checklist-item__counter {
-	margin-right: 5px;
+	margin-right: 1em;
 	font-weight: 600;
 }
 
